# samod

./: CHANGELOG.md  flake.nix
samod/: Cargo.toml
samod-core/src/: actors.rs  document_changed.rs  lib.rs
samod-core/src/actors/: local_repo.rs  messages.rs
samod-core/src/actors/document/: doc_actor_result.rs  doc_state.rs  document_actor.rs
samod-core/src/actors/hub/: hub_event.rs  hub_input.rs  hub_results.rs  state.rs
samod-core/src/actors/hub/command/: command.rs  command_result.rs
samod-core/src/actors/hub/connection/: established_connection.rs
samod-core/src/actors/hub/io/: hub_io_action.rs  hub_io_result.rs
samod-core/src/actors/hub/state/: actor_info.rs  pending_commands.rs
samod-core/src/actors/local_repo/: io.rs  local_repo_actor.rs  local_repo_actor_id.rs  local_repo_actor_result.rs  local_repo_request_id.rs  spawn_args.rs
samod-core/src/actors/local_repo/io/: local_repo_io_result.rs  local_repo_io_task.rs
samod-core/src/actors/messages/: doc_to_hub_msg.rs  hub_to_local_repo_msg.rs  local_repo_to_hub_msg.rs
samod-core/tests/: create_find_change.rs  document_changed.rs
samod-test-harness/src/: lib.rs  local_repo_actor_runner.rs  samod_ref.rs  samod_wrapper.rs
samod/src/: actor_handle.rs  builder.rs  doc_actor_inner.rs  doc_handle.rs  doc_lease.rs  import_error.rs  io_loop.rs  lib.rs  local_export_error.rs  local_repo_actor_inner.rs  local_repo_actor_task.rs  local_repo_runner.rs  websocket.rs
samod/tests/: smoke.rs
